# green500_analysis

./: charts.ipynb  pyproject.toml  trends.ipynb  unique_charts.ipynb
data/: green500_top_202311.xlsx  green500_top_202406.xlsx  green500_top_202411.xlsx
